# augment-aod-creds

./: .gitignore  README.md  install-augment-monitor.sh  package-lock.json  package.json  playwright.config.js  svelte.config.js  tailwind.config.js  vite.config.js  vitest.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analytics.rs  augment_client.rs  config.rs  database.rs  error.rs  main.rs  notifications.rs  scraper.rs
src/lib/components/: AugmentLogin.svelte  BalanceWidget.svelte  OrbSetup.svelte  UsageChart.svelte
src/lib/stores/: app.js
src/routes/: +layout.svelte  +page.svelte
tests/: app.test.js  setup.js
tests/e2e/: app.spec.js
